--- a/trasform_transition.html
+++ b/trasform_transition.html
@@ -14,7 +14,7 @@
         height: 100px;
         background-color: rgba(255, 255, 0, 0.7);
         border: 2px solid black;
-        transition: 1s;
+        transition: 1s; /* 애니메이션이 부드럽게 */
       }
 
       .box:hover {
